# Rayleigh_Benard_Convection_CUDA

./: CMakeLists.txt  README.md  domain.txt
.github/workflows/: Ubuntu.yml  build.yml  gpu_info.yml  run_tests.yml
include/: Boundary.hpp  DataStructure.hpp  Discretization.hpp  Domain.hpp  Fields.hpp  PressureSolver.hpp  Simulation.hpp  block_sizes.hpp  boundary.hpp  cuda_utils.hpp  datastructure.hpp  discretization.hpp  domain.hpp  fields.hpp  pressure_solver.hpp  simulation.hpp
include/cuda_kernels/: boundary_kernels.hpp  fluxes_kernels.hpp  pressure_solver_kernels.hpp  right_hand_side_kernels.hpp  temperature_kernels.hpp  timestep_kernels.hpp  velocity_kernels.hpp
src/: Boundary.cpp  BoundaryKernels.cu  DataStructure.cpp  DataStructure.cu  Discretization.cpp  Discretization.cu  DtKernel.cu  FKernel.cu  FandGKernel.cu  GKernel.cu  PressureSolver.cpp  PressureSolver.cu  PressureSolverKernel.cu  RSKernel.cu  Simulation.cpp  Simulation.cu  SimulationKernels.cu  TemperatureKernel.cu  VelocityKernels.cu  boundary.cpp  datastructure.cpp  discretization.cpp  main.cpp  pressure_solver.cpp  simulation.cpp
src/cuda_src/: FKernel.cu  GKernel.cu  boundary_kernels.cu  datastructure.cu  discretization.cu  fluxes_kernels.cu  pressure_solver_kernels.cu  right_hand_side_kernels.cu  temperature_kernels.cu  timestep_kernels.cu  velocity_kernels.cu
tests/: CMakeLists.txt  Makefile  discretization_host.cpp  discretization_host.hpp  discretization_test.cu  right_hand_side_kernel_test.cu  timestep_kernels_test.cu  velocity_kernels_test.cu
